fix: remove body overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ body {
 
   background: $blue-dark;
   
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 img, svg {
